import { BasePizza } from "../BasePizza";

export class FarmHouse extends BasePizza {
    cost(): number {
        return 200;
    }
}
