import { BasePizza } from "../BasePizza";

export class Margerita extends BasePizza {
    cost(): number {
        return 150;
    }
}