import { BasePizza } from "../BasePizza";

export class Vegdelight extends BasePizza {
    cost(): number {
        return 120;
    }
}
