import { BasePizza } from "../BasePizza";

export abstract class ToppingDecorator extends BasePizza{

}