@startuml

title Pizza Store Relationships - Class Diagram


class main{
  +main():void
}

abstract class PizzaDecorator {
  +cost():number
}

abstract class ToppingDecorator {
  +cost():number
}

class Margerita
class Vegdelight
class FarmHouse
class ExtraCheese
class Mushroom
Class Jalapeno


main o-- PizzaDecorator:Aggregation
PizzaDecorator "1" *-up- "1" Margerita: Inheritance
PizzaDecorator "1" *-up- "1" Vegdelight: Inheritance
PizzaDecorator "1" *-up- "1" FarmHouse: Inheritance
PizzaDecorator "1" *-up- "1" ToppingDecorator: Inheritance
PizzaDecorator o-- ToppingDecorator:Aggregation
ToppingDecorator "1" *-up- "1" ExtraCheese
ToppingDecorator "1" *-up- "1" Mushroom
ToppingDecorator "1" *-up- "1" Jalapeno

@enduml